# rclswi

./: .fileheader  CMakeLists.txt  README.md  colcon.pkg  package.xml
cmake/: FindSWI-Prolog.cmake
doc/: Design.md  EVAL.md
examples/: README.md  action_server.pl  actions.pl  add_two_ints.pl  all.pl  constants.pl  demo.pl  doc.pl  logging.pl  multi_array.pl  num3.pl  params.pl  pingpong.pl  sequences.pl  services.pl  std_msgs.pl  struct_sequence.pl  times.pl  turtlesim_node.pl  turtlesim_teleop.pl
prolog/: ros.pl
prolog/ros/: actions.pl  clocks.pl  debug.pl  graph.pl  logging.pl  parameters.pl  pkg.pl  qos.pl  services.pl  types.pl
prolog/ros/action/: client.pl  server.pl
prolog/ros/detail/: actions.pl  options.pl  param.pl
prolog/ros/param/: client.pl  services.pl  store.pl
prolog/util/: teleop.pl
scripts/: rclswi
src/: common.c  common.h  logging.c  pointer.c  pointer.h  qos.c  qos.h  rclswi-cpp.cpp  rclswi.c  rclswi.h
template/: CMakeLists.txt  package.xml
template/prolog/: main.pl  rclswi_setup.pl
template/script/: run
