<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>@PROJECT@</name>
  <version>@VERSION@</version>
  <description>@DESCRIPTION@</description>
  <maintainer email="@EMAIL@">@MAINTAINER@</maintainer>
  <license>@LICENCE@</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- Needed if the project defines ROS types
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  -->

  <depend>rclswi</depend>
  <!-- add other dependencies here -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
